--- a/tasks/timesyncd.yml
+++ b/tasks/timesyncd.yml
@@ -20,28 +20,32 @@
       command: jc timedatectl status
       check_mode: false
       changed_when: false
-      register: systemd_timedatectl_status
+      register: systemd_timedatectl_status_command
+
+    - name: Set a variable for the timedatectl status
+      set_fact:
+        systemd_timedatectl_status: "{{ systemd_timedatectl_status_command.stdout | from_json }}" 
 
     - name: Debug the timedatectl status
       debug:
-        var: systemd_timedatectl_status.stdout
+        var: systemd_timedatectl_status
         verbosity: 2
 
     - name: Debug the timedatectl status variable type
       debug:
-        msg: "{{ systemd_timedatectl_status.stdout | type_debug }}"
+        msg: "{{ systemd_timedatectl_status | type_debug }}"
         verbosity: 2
 
     - name: Debug the timedatectl ntp_service status
       debug:
-        var: systemd_timedatectl_status.stdout.ntp_service
+        var: systemd_timedatectl_status.ntp_service
         verbosity: 2
 
     - name: Enable systemd NTP
       command: timedatectl set-ntp true
       when: >
-        ( systemd_timedatectl_status.stdout.ntp_service is not defined ) or
-        ( systemd_timedatectl_status.stdout.ntp_service != "active" )
+        ( systemd_timedatectl_status.ntp_service is not defined ) or
+        ( systemd_timedatectl_status.ntp_service != "active" )
 
   tags:
     - systemd
