--- a/tasks/timesyncd.yml
+++ b/tasks/timesyncd.yml
@@ -17,14 +17,14 @@
         group: root
 
     - name: Get the timedatectl status
-      ansible.builtin.command: jc timedatectl status
+      ansible.builtin.command: timedatectl status
       check_mode: false
       changed_when: false
       register: systemd_timedatectl_status_command
 
     - name: Set a variable for the timedatectl status dictionary
       ansible.builtin.set_fact:
-        systemd_timedatectl_status: "{{ systemd_timedatectl_status_command.stdout | from_json }}"
+        systemd_timedatectl_status: "{{ systemd_timedatectl_status_command.stdout | community.general.jc('timedatectl') | from_json }}"
 
     - name: Debug the timedatectl status
       ansible.builtin.debug:
