reboot_command only available for Ansible 2.11

--- a/tasks/timesyncd.yml
+++ b/tasks/timesyncd.yml
@@ -33,8 +33,7 @@
           when: ( "Failed to connect to bus" in systemd_timedatectl_status_command.stderr )
 
         - name: Rebooting
-          ansible.builtin.reboot:
-            reboot_command: rebooot -h now
+          ansible.builtin.command: rebooot -h now
           when: ( "Failed to connect to bus" in systemd_timedatectl_status_command.stderr )
 
         - name: Get the timedatectl status
