--- a/tasks/timesyncd.yml
+++ b/tasks/timesyncd.yml
@@ -33,7 +33,7 @@
           when: ( "Failed to connect to bus" in systemd_timedatectl_status_command.stderr )
 
         - name: Rebooting
-          ansible.builtin.command: rebooot -h now
+          ansible.builtin.command: reboot -h now
           when: ( "Failed to connect to bus" in systemd_timedatectl_status_command.stderr )
 
         - name: Get the timedatectl status
