--- a/tasks/timesyncd.yml
+++ b/tasks/timesyncd.yml
@@ -42,6 +42,10 @@
         #     reboot_command: reboot -h now
         #   when: ( "Failed to connect to bus" in systemd_timedatectl_status_command.stderr )
 
+        - name: Pause for 30 seconds to allow the server to come back up
+          ansible.builtin.pause:
+            seconds: 30
+
     - name: Set a variable for the timedatectl status dictionary
       ansible.builtin.set_fact:
         systemd_timedatectl_status: "{{ systemd_timedatectl_status_command.stdout | community.general.jc('timedatectl') }}"
