--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,17 +6,18 @@ galaxy_info:
   description: Ansible role for configuring some systemd services on Debian
   company: Webarchitects Co-operative
   license: GNU General Public License v3.0 (GPLv3)
-  min_ansible_version: 2.9
+  min_ansible_version: 2.11
   platforms:
     - name: debian
       versions:
+        - bookworm
         - bullseye
         - buster
         - stretch
   dependencies:
     - name: jc
       src: https://git.coop/webarch/jc
-      version: 1.1.1
+      version: 1.6.0
       scm: git
   galaxy_tags:
     - debian
