--- a/tasks/timesyncd.yml
+++ b/tasks/timesyncd.yml
@@ -8,7 +8,7 @@
           - systemd-timesyncd
         state: present
 
-    - name: timesyncd configuration in place
+    - name: Configuration for timesyncd in place
       ansible.builtin.template:
         src: timesyncd.conf.j2
         dest: /etc/systemd/timesyncd.conf
