Add systemctl list-unit-files | jc --systemctl-luf

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,6 +8,9 @@
           - systemd
         state: present
 
+    - name: Checks
+      ansible.builtin.include_tasks: checks.yml
+
     - name: Include timesyncd tasks
       ansible.builtin.include_tasks: timesyncd.yml
       when: systemd_timesyncd
