--- a/tasks/checks.yml
+++ b/tasks/checks.yml
@@ -10,11 +10,13 @@
 
     - name: Set a fact for the systemd unit files
       ansible.builtin.set_fact:
-        systemd_unit_files_existing: "{{ systemd_list_unit_files.stdout | from_json | community.general.jc(systemctl-luf) }}"
+        systemd_unit_files_existing: "{{ systemd_list_unit_files.stdout | from_json | community.general.jc('systemctl-luf') }}"
 
     - name: Set a fact for the enabled systemd unit files
       ansible.builtin.set_fact:
-        systemd_unit_files_enabled: "{{ systemd_unit_files_existing | community.general.json_query([?state == 'enabled'].unit_file) }}"
+        systemd_unit_files_enabled: "{{ systemd_unit_files_existing | community.general.json_query(systemd_unit_files_enabled_jmespath_query) }}"
+      vars:
+        systemd_unit_files_enabled_jmespath_query: "[?state == 'enabled'].unit_file"
 
     - name: Debug enabled systemd unit files
       ansible.builtin.debug:
