--- a/tasks/checks.yml
+++ b/tasks/checks.yml
@@ -15,7 +15,7 @@
 
     - name: Set a fact for the systemd unit files
       ansible.builtin.set_fact:
-        systemd_unit_files_existing: "{{ systemd_list_unit_files.stdout | from_json | community.general.jc('systemctl-luf') }}"
+        systemd_unit_files_existing: "{{ systemd_list_unit_files.stdout | community.general.jc('systemctl-luf') }}"
 
     - name: Set a fact for the enabled systemd unit files
       ansible.builtin.set_fact:
